@@ -85,7 +85,7 @@ method is non-private so JUnit code can
                         indexList=new LinkedList();
                         paramMap.put(name, indexList);
                     }
-                    indexList.add(new Integer(index));
+                    indexList.add(Integer.valueOf(index));
 
                     index++;
                 }
